--- a/src/assets/styles/common.scss
+++ b/src/assets/styles/common.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Metal+Mania&family=Noto+Serif+SC:wght@400;500;700&family=Roboto:wght@700&display=swap');
 
 body,
 html {
@@ -11,7 +11,7 @@ html {
 body {
   min-height: 100vh;
   background: #fff;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Noto Serif SC', serif;
 }
 .container {
   max-width: 800px;
@@ -85,6 +85,7 @@ input[type=text], textarea {
   padding-bottom: 12px;
   margin-top: 6px;
   font-size: 12.5px;
+  line-height: 18px;
 }
 form {
   padding: 18px 0;
